# spec-drift

./: CHANGELOG.md  Cargo.toml  README.md  action.yml
.github/workflows/: release.yml  rust.yml
examples/: library_usage.rs
src/: auto_fix.rs  baseline.rs  blame.rs  config.rs  context.rs  error.rs  lib.rs  main.rs  suppress.rs  workspace.rs
src/analyzers/: ci.rs  constraint.rs  coverage.rs  deprecated.rs  docs.rs  env.rs  examples.rs  logic_gap.rs  mod.rs  outdated_logic.rs  tests.rs
src/domain/: mod.rs
src/llm/: anthropic.rs  mod.rs  null.rs  openai.rs
src/parsers/: markdown.rs  mod.rs  rust.rs
src/reporters/: fix_prompt.rs  human.rs  json.rs  mod.rs  sarif.rs
src/sources/: mod.rs
tests/: cli.rs
