[package]
name = "spec-drift"
version = "0.1.0"
edition = "2021"
description = "Semantic coherence analysis between specification and implementation for Rust projects."
license = "MIT OR Apache-2.0"
repository = "https://github.com/asmuelle/spec-drift"
readme = "README.md"
rust-version = "1.75"
keywords = ["cli", "lint", "documentation", "rust", "agents"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "spec-drift"
path = "src/main.rs"

[lib]
name = "spec_drift"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
proc-macro2 = { version = "1", features = ["span-locations"] }
pulldown-cmark = "0.12"
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
